--- a/backend/.env
+++ b/backend/.env
@@ -18,4 +18,4 @@
 APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/matchroom?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@mysql:3306/matchroom?serverVersion=8.0.32&charset=utf8mb4"
