--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-spring/web": "^9.7.5",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^9.8.8",
+    "framer-motion": "^12.8.0",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
