--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@react-spring/web": "^9.7.5",
