--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,19 +27,19 @@ services:
     networks:
       - backend_network
 
-  backend:
-   build: ./backend
-   container_name: matchroom_backend
-   restart: unless-stopped
-   ports:
-     - "8000:8000"
-   volumes:
-     - ./backend:/var/www/html
-   depends_on:
-     - mysql
-   networks:
-     - backend_network
-     - frontend_network
+  # backend:
+  #  build: ./backend
+  #  container_name: matchroom_backend
+  #  restart: unless-stopped
+  #  ports:
+  #    - "8000:8000"
+  #  volumes:
+  #    - ./backend:/var/www/html
+  #  depends_on:
+  #    - mysql
+  #  networks:
+  #    - backend_network
+  #    - frontend_network
 
   frontend:
     build: ./frontend
