--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.8.0",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.1",
