--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,21 @@
     "@mui/material": "^7.0.2",
     "@react-spring/web": "^9.7.5",
     "@vis.gl/react-google-maps": "^1.5.2",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.8.0",
+    "lucide-react": "^0.503.0",
+    "motion": "^12.9.1",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
-    "react-scripts": "^5.0.1",
-    "react-tinder-card": "^1.6.4"
+    "react-scripts": "^3.0.1",
+    "react-tinder-card": "^1.6.4",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
