--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-spring/web": "^9.7.5",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
@@ -28,7 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-tinder-card": "^1.6.4",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
