--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@react-spring/web": "^9.7.5",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "canvas-confetti": "^1.9.3",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.8.0",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.1",
