--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "cobe": "^0.6.3",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.8.0",
+    "jwt-decode": "^4.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.503.0",
